log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: generator
          image: parthvasave/log-output
          command: ["node", "generator.js"]
          volumeMounts:
            - name: shared-data
              mountPath: /shared-data

        - name: log-output
          image: parthvasave/log-output
          ports:
            - containerPort: 3000
          # Ready only when the ping count can be fetched from Ping-pong
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: shared-data
              mountPath: /shared-data
            - name: config-volume
              mountPath: /etc/config

      volumes:
        - name: shared-data
          emptyDir: {}
        - name: config-volume
          configMap:
            name: log-output-config

---
apiVersion: v1
kind: Service
metadata:
  name: log-output
  namespace: exercises
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
